Closed
Bug 330170
Opened 19 years ago
Closed 19 years ago
crash in history tab of Side bar [@ nsXULTreeBuilder::CycleHeader]
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: baffclan, Assigned: neil)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
1.12 KB,
patch
|
enndeakin
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060310 SeaMonkey/1.5a
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060310 SeaMonkey/1.5a
crash in history tab of Side bar
Reproducible: Always
Steps to Reproduce:
1. Open sidebar
2. Click history tab
3. click right column of the column header
and check Location item.
4. Drag Location Column, drop left of Titel Column.
5. Click a Location Column.
TB16227988Z, TB16227975W, TB16227749Q, TB16227730Q
Incident ID: 16227749
Stack Signature nsXULTreeBuilder::CycleHeader 12a1a888
Product ID MozillaTrunk
Build ID 2006031009
Trigger Time 2006-03-11 06:52:00.0
Platform Win32
Operating System Windows NT 5.1 build 2600
Module gklayout.dll + (001b6678)
URL visited
User Comments
Since Last Crash 17 sec
Total Uptime 10087 sec
Trigger Reason Access violation
Source File, Line No. c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/xul/templates/src/nsXULTreeBuilder.cpp, line 919
Stack Trace
nsXULTreeBuilder::CycleHeader [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/xul/templates/src/nsXULTreeBuilder.cpp, line 919]
XPTC_InvokeByIndex [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp, line 102]
XPCWrappedNative::CallMethod [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp, line 2152]
XPC_WN_CallMethod [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 1444]
js_Invoke [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/js/src/jsinterp.c, line 1246]
js_Interpret [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/js/src/jsinterp.c, line 3886]
js_Invoke [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/js/src/jsinterp.c, line 1270]
js_InternalInvoke [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/js/src/jsinterp.c, line 1347]
JS_CallFunctionValue [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/js/src/jsapi.c, line 4189]
nsJSContext::CallEventHandler [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/dom/src/base/nsJSEnvironment.cpp, line 1426]
nsJSEventListener::HandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/dom/src/events/nsJSEventListener.cpp, line 195]
nsXBLPrototypeHandler::ExecuteHandler [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp, line 507]
nsXBLEventHandler::HandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/xbl/src/nsXBLEventHandler.cpp, line 86]
nsEventListenerManager::HandleEventSubType [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventListenerManager.cpp, line 1653]
nsEventListenerManager::HandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventListenerManager.cpp, line 1760]
nsEventTargetChainItem::HandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 335]
nsEventTargetChainItem::HandleEventTargetChain [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 455]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 405]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventTargetChainItem::CreateChainAndHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 392]
nsEventDispatcher::Dispatch [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 575]
PresShell::HandleEventInternal [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/layout/base/nsPresShell.cpp, line 6117]
PresShell::HandleEventWithTarget [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/layout/base/nsPresShell.cpp, line 6014]
nsEventStateManager::CheckForAndDispatchClick [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventStateManager.cpp, line 3030]
nsEventStateManager::PostHandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventStateManager.cpp, line 2013]
PresShell::HandleEventInternal [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/layout/base/nsPresShell.cpp, line 6135]
PresShell::HandlePositionedEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/layout/base/nsPresShell.cpp, line 5996]
PresShell::HandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/layout/base/nsPresShell.cpp, line 5824]
nsViewManager::HandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/view/src/nsViewManager.cpp, line 1712]
nsViewManager::DispatchEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/view/src/nsViewManager.cpp, line 1665]
HandleEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/view/src/nsView.cpp, line 174]
nsWindow::DispatchEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 1053]
nsWindow::DispatchMouseEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 6019]
ChildWindow::DispatchMouseEvent [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 6201]
nsWindow::WindowProc [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 1242]
USER32.dll + 0x8734 (0x77cf8734)
USER32.dll + 0x8816 (0x77cf8816)
USER32.dll + 0x89cd (0x77cf89cd)
USER32.dll + 0x8a10 (0x77cf8a10)
nsAppShell::Run [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsAppShell.cpp, line 159]
nsAppStartup::Run [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/xpfe/components/startup/src/nsAppStartup.cpp, line 208]
main [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1750]
WinMain [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1774]
kernel32.dll + 0x16d4f (0x7c816d4f)
Summary: crash in history tab of Side bar → crash in history tab of Side bar [@ nsXULTreeBuilder::CycleHeader]
Comment 2•19 years ago
|
||
This bug happens also on
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060312 SeaMonkey/1.5a Mnenhy/0.7.3.10002
Assignee: sidebar → timeless
Component: Sidebar → XP Toolkit/Widgets: Trees
Keywords: crash
Product: Mozilla Application Suite → Core
QA Contact: xptoolkit.trees
Version: unspecified → Trunk
Attachment #214813 -
Flags: superreview?(bzbarsky)
Attachment #214813 -
Flags: review?(neil)
| Assignee | ||
Comment 4•19 years ago
|
||
The previous patch, although useful, only wallpapers over the actual bug.
This is actually a regression from bug 212789. Prior to that bug, the <treecol>s were enumerated in visual order by walking the child frames of the <treecols>. While that bug introduced extra frames in to the mix, it changed to walking the sibling frames of the first <treecol>. However, if the first <treecol> is not leftmost then the columns on its left get ignored and are not enumerated.
Attachment #214826 -
Flags: superreview?(bzbarsky)
Attachment #214826 -
Flags: review?(Jan.Varga)
Comment 5•19 years ago
|
||
Comment on attachment 214826 [details] [diff] [review]
Actually fix the bug
Add a comment explaining the weird code pattern, ok?
Attachment #214826 -
Flags: superreview?(bzbarsky) → superreview+
Comment 6•19 years ago
|
||
Comment on attachment 214813 [details] [diff] [review]
validate arguments, label arguments, use Truncate
This is kinda big; I won't be able to get to it before April, probably. :(
Updated•19 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 7•19 years ago
|
||
Comment on attachment 214813 [details] [diff] [review]
validate arguments, label arguments, use Truncate
>+ NS_ENSURE_ARG_POINTER(aResource);
By my totally arbitrary scan of existing source, we seem to use NS_ENSURE_ARG for in args, and NS_ENSURE_ARG_POINTER for out args (in which case I suppose we could optimize away NS_ENSURE_ARG_POINTER in release builds because xpconnnect can never pass a null out pointer).
>+nsXULTreeBuilder::CycleCell(PRInt32 aRow, nsITreeColumn* oCol)
Typo "oCol".
Attachment #214813 -
Flags: review?(neil) → review+
Attachment #214813 -
Flags: superreview?(bzbarsky) → superreview?(roc)
Attachment #214813 -
Flags: superreview?(roc) → superreview+
Comment on attachment 214813 [details] [diff] [review]
validate arguments, label arguments, use Truncate
mozilla/content/xul/templates/src/nsXULTreeBuilder.cpp 1.91
Attachment #214813 -
Attachment is obsolete: true
Comment 10•19 years ago
|
||
Can anyone still reproduce this problem?
If not, I will mark this as worksforme.
Comment 11•19 years ago
|
||
please don't mark bugs that have patches and cvs commits as worksforme. at this point, we thank you for your input, and eventually we'll resolve the bug as fixed.
| Assignee | ||
Comment 12•19 years ago
|
||
Comment on attachment 214826 [details] [diff] [review]
Actually fix the bug
I forgot that the fix for bug 330236 also depends on this...
Attachment #214826 -
Flags: review?(enndeakin)
Attachment #214826 -
Flags: review?(Jan.Varga)
Attachment #214826 -
Flags: approval-branch-1.8.1?(enndeakin)
Comment 13•19 years ago
|
||
Comment on attachment 214826 [details] [diff] [review]
Actually fix the bug
Looks good, in fact slightly better than the similar change I made for bug 201499.
Attachment #214826 -
Flags: review?(enndeakin) → review+
| Assignee | ||
Comment 14•19 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•19 years ago
|
Attachment #214826 -
Flags: approval-branch-1.8.1?(enndeakin) → approval1.8.1?
Updated•19 years ago
|
Attachment #214826 -
Flags: approval1.8.1? → approval1.8.1+
Comment 15•19 years ago
|
||
Neil: are you going to check this in on the 1.8 branch?
| Assignee | ||
Comment 16•19 years ago
|
||
Sorry, I didn't notice the flag change.
| Assignee | ||
Comment 18•19 years ago
|
||
On second thoughts, this patch isn't needed on the branch :-[
Keywords: fixed1.8.1
Comment 19•19 years ago
|
||
Comment on attachment 214826 [details] [diff] [review]
Actually fix the bug
Clearing approval flag per last comment
Attachment #214826 -
Flags: approval1.8.1+
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: xptoolkit.trees → xptoolkit.widgets
Updated•14 years ago
|
Crash Signature: [@ nsXULTreeBuilder::CycleHeader]
You need to log in
before you can comment on or make changes to this bug.
Description
•