Bug 330170 crash in history tab of Side bar [@ nsXULTreeBuilder::CycleHeader] validate arguments, label arguments, use Truncate r=neil sr=roc